--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna recipe for 4 people</a>
+    <a href="recipes/lasagna.html">Lasagna recipe for 8 servings</a>
+        <a href="recipes/garlicbread.html">Garlic bread recipe for 10 servings</a>
+
 </body>
 </html>
