Fix image source link to make the image appear

--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Garlic bread recipe (10 servings)</h1> 
-    <img src="garlicbread.webp" alt="Delicious freshly baked garlic bread">
+    <img src="../garlicbread.jpg" alt="Delicious freshly baked garlic bread">
     <h3>Description of the recipe</h3>
     <p>We're going to make a freshly baked garlic bread.</p>
     <h2>Ingredients</h2>
