Fixed anchor text for enchiladas in index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin recipes</h1>
     <a href="recipes/lasagna.html">Lasagna recipe for 8 servings</a>
         <a href="recipes/garlicbread.html">Garlic bread recipe for 10 servings</a>
-        <a href="recipes/enchiladas.html">Garlic bread recipe for 10 servings</a>
+        <a href="recipes/enchiladas.html">Enchiladas recipe for 10 servings</a>
 
 </body>
 </html>
