Change height and width of the picture

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Lasagna recipe (8 servings)</h1>
-    <img src="../lasagna.jpg" alt="Delicious freshly baked lasagna">
+    <img src="../lasagna.jpg" alt="Delicious freshly baked lasagna" width="300px" height="200px">
     <h3>Description of the recipe</h3>
     <p>We're going to make a freshly baked homemade meat lasagna.</p>
     <h2>Ingredients</h2>
