Change height and width of the picture

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
 
     <h1>Enchiladas recipe (10 servings)</h1> 
-    <img src="../enchiladas.jpg" alt="Delicious freshly baked enchiladas">
+    <img src="../enchiladas.jpg" alt="Delicious freshly baked enchiladas" width="300px" height="200px">
     <h3>Description of the recipe</h3>
     <p>We're going to make freshly baked enchiladas.</p>
     <h2>Ingredients</h2>
