Added style to the index links, and to every recipe pages with CSS, with margins, padding, and an Ubuntu webfont

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../style.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
     <title>Enchiladas recipe</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-
+    <button><a href="../index.html">Home</a></button>
+<div class="enchiladascard">   
     <h1>Enchiladas recipe (10 servings)</h1> 
     <img src="../enchiladas.jpg" alt="Delicious freshly baked enchiladas" width="300px" height="200px">
     <h3>Description of the recipe</h3>
     <p>We're going to make freshly baked enchiladas.</p>
+    </div>
+    <div class="enchiladasingredients"> 
     <h2>Ingredients</h2>
     <ul>
  <li>2 (16 ounce) jars prepared salsa</li>
@@ -20,11 +27,14 @@
  <li>20 (8 inch) flour tortillas</li>
  <li>1 (8 ounce) package shredded Cheddar-Monterey Jack cheese blend</li>
  </ul>
+ </div>
+ <div class="enchiladassteps"> 
  <h2>Steps</h2>
  <ol>
-<li>1. Preheat an oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking dish, and pour the salsa into the bottom of the dish. Set aside.</li>
-<li>2. Cook and stir the ground beef in a skillet over medium heat for about 10 minutes, until meat is browned and crumbly. Drain the grease from the beef, and add the salsa con queso to the skillet, stirring to mix well. Place about 2 tablespoons of the beef mixture down the center of each tortilla, roll the tortillas, and place them seam side down on top of the salsa in the baking dish. Sprinkle the shredded cheese on top of the enchiladas.</li>
-<li>3. Bake for 15 to 20 minutes in the preheated oven, until the cheese is browned and the enchiladas are hot and bubbling.</li>
+<li>Preheat an oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking dish, and pour the salsa into the bottom of the dish. Set aside.</li></br>
+<li>Cook and stir the ground beef in a skillet over medium heat for about 10 minutes, until meat is browned and crumbly. Drain the grease from the beef, and add the salsa con queso to the skillet, stirring to mix well. Place about 2 tablespoons of the beef mixture down the center of each tortilla, roll the tortillas, and place them seam side down on top of the salsa in the baking dish. Sprinkle the shredded cheese on top of the enchiladas.</li></br>
+<li>Bake for 15 to 20 minutes in the preheated oven, until the cheese is browned and the enchiladas are hot and bubbling.</li>
  </ol>
+ </div>
 </body>
 </html>
