--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../style.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
     <title>Lasagna recipe</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <button><a href="../index.html">Home</a></button>
 
-    <h1>Lasagna recipe (8 servings)</h1>
+    <div class="lasagnacard"> <h1>Lasagna recipe (8 servings)</h1>
     <img src="../lasagna.jpg" alt="Delicious freshly baked lasagna" width="300px" height="200px">
     <h3>Description of the recipe</h3>
     <p>We're going to make a freshly baked homemade meat lasagna.</p>
-    <h2>Ingredients</h2>
+    </div>
+
+    <div class="lasagnaingredients"><h2>Ingredients</h2>
     <ul>
- <li>Meat: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li>
- <li>Onion: A diced onion is cooked until translucent with the ground meat.</li>
- <li>Canned tomatoes: You'll need a can of tomato sauce and a can of crushed tomatoes.</li>
- <li>Fresh herbs: For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li>
- <li>Sugar: A dash of sugar balances out all of the acidity from the tomatoes.</li>
- <li>Spices and seasonings: This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li>
- <li>Noodles: Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li>
- <li>Cheese: The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
+ <li>Meat: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</li><br>
+ <li>Onion: A diced onion is cooked until translucent with the ground meat.</li><br>
+ <li>Canned tomatoes: You'll need a can of tomato sauce and a can of crushed tomatoes.</li><br>
+ <li>Fresh herbs: For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li><br>
+ <li>Sugar: A dash of sugar balances out all of the acidity from the tomatoes.</li><br>
+ <li>Spices and seasonings: This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li><br>
+ <li>Noodles: Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li><br>
+ <li>Cheese: The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li><br>
  <li>Eggs: Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
  </ul>
+ </div> 
+ <div class="lasagnasteps">
  <h2>Steps</h2>
  <ol>
-<li>1. Cook the meat: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
-<li>2. Cook the noodles: Boil the lasagna noodles in lightly salted water until they're al dente.</li>
-<li>3. Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
-<li>4. Assemble the lasagna: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
-<li>5. Bake the lasagna: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+<li>Cook the meat: Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li><br>
+<li>Cook the noodles: Boil the lasagna noodles in lightly salted water until they're al dente.</li><br>
+<li>Make the cheese layer: Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li><br>
+<li>Assemble the lasagna: Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li><br>
+<li>Bake the lasagna: Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li><br>
  </ol>
  <h2>Cooking time</h2>
  <p>In an oven preheated to 375 degrees F, this homemade lasagna should be perfectly baked in about 50 minutes (30-40 minutes covered, 5-10 minutes uncovered).</p>
+  </div>
 </body>
 </html>
