--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<link href="style.css" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+<title>My recipes</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna recipe for 8 servings</a>
-        <a href="recipes/garlicbread.html">Garlic bread recipe for 10 servings</a>
-        <a href="recipes/enchiladas.html">Enchiladas recipe for 10 servings</a>
+    <a href="recipes/lasagna.html" class="lasagna">Lasagna recipe for 8 servings</a>
+        <a href="recipes/garlicbread.html" class="garlicbread">Garlic bread recipe for 10 servings</a>
+        <a href="recipes/enchiladas.html" class="enchiladas">Enchiladas recipe for 10 servings</a>
 
 </body>
 </html>
