--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -3,34 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet"/>
+
     <title>Garlic bread recipe</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-
+    <button><a href="../index.html">Home</a></button>
+<div class="garlicbreadcard"> 
     <h1>Garlic bread recipe (10 servings)</h1> 
     <img src="../garlicbread.jpg" alt="Delicious freshly baked garlic bread" width="300px" height="200px">
     <h3>Description of the recipe</h3>
     <p>We're going to make a freshly baked garlic bread.</p>
+    </div>
+    <div class="garlicbreadingredients"> 
+
     <h2>Ingredients</h2>
     <ul>
- <li>½ cup butter, softened</li>
- <li>¼ cup grated Parmesan cheese</li>
- <li>2 cloves garlic, minced</li>
- <li>¼ teaspoon dried marjoram</li>
- <li>¼ teaspoon dried basil</li>
- <li>¼ teaspoon fines herbs</li>
- <li>¼ teaspoon dried oregano</li>
- <li>¼ teaspoon dried parsley, or to taste</li>
- <li>ground black pepper to taste</li>
+ <li>½ cup butter, softened</li></br>
+ <li>¼ cup grated Parmesan cheese</li></br>
+ <li>2 cloves garlic, minced</li></br>
+ <li>¼ teaspoon dried marjoram</li></br>
+ <li>¼ teaspoon dried basil</li></br>
+ <li>¼ teaspoon fines herbs</li></br>
+ <li>¼ teaspoon dried oregano</li></br>
+ <li>¼ teaspoon dried parsley, or to taste</li></br>
+ <li>ground black pepper to taste</li></br>
  <li>1 loaf unsliced Italian bread</li>
  </ul>
+ </div>
+ <div class="garlicbreadsteps"> 
+
  <h2>Steps</h2>
  <ol>
-<li>1. Gather ingredients and preheat the oven to 350 degrees F (175 degrees C).</li>
-<li>2. Mix butter, Parmesan cheese, garlic, marjoram, basil, fines herbs, oregano, parsley, and pepper together in a bowl until thoroughly combined.</li>
-<li>3. Slice Italian bread loaf in half lengthwise; spread each half generously with the garlic butter mixture. Transfer onto a baking sheet.</li>
-<li>4. Bake on the top rack of the preheated oven until butter mixture melts and bubbles, about 10 to 15 minutes. Turn on the oven's broiler and broil until the bread is your desired shade of golden brown, 1 to 2 more minutes.</li>
+<li>Gather ingredients and preheat the oven to 350 degrees F (175 degrees C).</br>
+<li>Mix butter, Parmesan cheese, garlic, marjoram, basil, fines herbs, oregano, parsley, and pepper together in a bowl until thoroughly combined.</li></br>
+<li>Slice Italian bread loaf in half lengthwise; spread each half generously with the garlic butter mixture. Transfer onto a baking sheet.</li></br>
+<li>Bake on the top rack of the preheated oven until butter mixture melts and bubbles, about 10 to 15 minutes. Turn on the oven's broiler and broil until the bread is your desired shade of golden brown, 1 to 2 more minutes.</li>
  </ol>
+ </div>
 </body>
 </html>
